--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/src/main.js",
     "start:dev": "tsnd --respawn src/main.ts",
     "test": "npm run test:unit",
-    "test:unit": "NODE_ENV=test jest --coverage",
+    "test:unit": "SET NODE_ENV=test jest --coverage",
     "prepare": "husky install",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
@@ -39,6 +39,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/pg": "^8.10.2",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
@@ -62,6 +63,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.0"
   }
 }
